--- a/final_project/src/components/navbar/nav.css
+++ b/final_project/src/components/navbar/nav.css
@@ -46,13 +46,14 @@
     font-size: 20px;
     padding-right: 0px;
     padding-left: 10px;
+    margin: 0px;
   }
   #navbar-buttons {
     padding: 10px 10px;
     font-size: 12px;
     text-align: center;
     margin-right: 0px;
-    margin-left: 20px;
+    margin-left: 10px;
   }
   #navbar-log{
     padding: 1px 7px;
