--- a/final_project/src/components/navbar/nav.css
+++ b/final_project/src/components/navbar/nav.css
@@ -1,94 +1,97 @@
 .navBar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
-    background-color: #467172;
-    padding: 5 20px;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  background-color: #467172;
+  padding: 5 20px;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+
+#navBarTitle {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 35px;
+  font-style: oblique;
+}
 
 .navBarInfo {
-  color: #fff;
-  text-decoration: none;
-  font-size: 25px;
-  margin: 5px;
+color: #fff;
+text-decoration: none;
+font-size: 25px;
+margin: 5px;
 }
 
 @media screen and (max-width: 400px) {
-  .navBar {
-    width: 390px;
-    justify-content: center;
-  }
+.navBar {
+  width: 390px;
+  justify-content: center;
+}
 }
 
 #navbar-buttons, #navbar-log {
-  padding: 17px 30px;
-  border-radius: 50px;
-  border: 0;
-  background-color: white;
-  box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  font-size: 15px;
-  transition: all .5s ease;
-  color: black;
+padding: 17px 30px;
+border-radius: 50px;
+border: 0;
+background-color: white;
+box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+letter-spacing: 1px;
+text-transform: uppercase;
+font-size: 15px;
+transition: all .5s ease;
+color: black;
 }
 #navbar-log {
-  margin-right: 10px;
-  margin-left: 0px;
+margin-right: 10px;
+margin-left: 0px;
 }
 
 @media screen and (max-width: 390px) {
-  .navBarInfo{
-    font-size: 20px;
-    padding-right: 0px;
-    padding-left: 10px;
-    margin: 0px;
-  }
-  #navbar-buttons {
-    padding: 10px 10px;
-    font-size: 12px;
-    text-align: center;
-    margin-right: 0px;
-    margin-left: 10px;
-  }
-  #navbar-log{
-    padding: 1px 7px;
-    font-size: 12px;
-    text-align: center;
-    /* margin-right: 5px; */
-    margin-left: 30px;
-    height: 29px;
-    display: flex;
-    align-items: center;
-  }
+.navBarInfo{
+  font-size: 20px;
+  padding-right: 0px;
+  padding-left: 10px;
+  margin: 0px;
+}
+#navbar-buttons {
+  padding: 10px 10px;
+  font-size: 12px;
+  text-align: center;
+  margin-right: 0px;
+  margin-left: 10px;
+}
+#navbar-log{
+  padding: 1px 7px;
+  font-size: 12px;
+  text-align: center;
+  /* margin-right: 5px; */
+  margin-left: 30px;
+  height: 29px;
+  display: flex;
+  align-items: center;
+}
 }
 
 #navbar-buttons:hover, #navbar-log:hover {
-  background-color: #1DC9A0;
-  cursor: pointer;
-  letter-spacing: 3px;
-  background-color: #1DC9A0(261deg 80% 48%);
-  color: hsl(0, 0%, 100%);
-  box-shadow: #1DC9A0 0px 7px 29px 0px;
+background-color: #1DC9A0;
+cursor: pointer;
+letter-spacing: 3px;
+background-color: #1DC9A0(261deg 80% 48%);
+color: hsl(0, 0%, 100%);
+box-shadow: #1DC9A0 0px 7px 29px 0px;
 }
 
 #barButton {
-  display: flex;
-  flex-direction: row;
+display: flex;
+flex-direction: row;
 }
 
 #navbar-buttons:active {
-  letter-spacing: 3px;
-  background-color: hsl(261deg 80% 48%);
-  color: hsl(0, 0%, 100%);
-  box-shadow: rgb(93 24 220) 0px 0px 0px 0px;
-  transform: translateY(10px);
-  transition: 100ms;
+letter-spacing: 3px;
+background-color: hsl(261deg 80% 48%);
+color: hsl(0, 0%, 100%);
+box-shadow: rgb(93 24 220) 0px 0px 0px 0px;
+transform: translateY(10px);
+transition: 100ms;
 }
-
-
-  
